fix: style scrollbar

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -29,9 +29,34 @@ table input.border-none {
 }
 
 .scrollbar-hidden {
-  @apply [scrollbar-width:none]; /* Firefox */
+  /* Firefox */
+  scrollbar-width: none;
+
+  /* Webkit-based browsers (Chrome, Safari, Edge) */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Internet Explorer/Edge */
+  -ms-overflow-style: none;
 }
 
-.scrollbar-hidden::-webkit-scrollbar {
-  @apply hidden;
+/* Style the scrollbar */
+::-webkit-scrollbar {
+  @apply w-2 h-2;
+}
+
+/* Style the track (the part the thumb slides within) */
+::-webkit-scrollbar-track {
+  @apply bg-none;
+}
+
+/* Style the thumb (the draggable part of the scrollbar) */
+::-webkit-scrollbar-thumb {
+  @apply bg-slate-700;
+}
+
+/* Hover effect for the thumb */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-slate-600;
 }
